# zelix

./: .gitignore  Cargo.toml  LICENSE  README.md
.helix/: config.toml  languages.toml
src/: config.rs  main.rs
src/commands/: find.rs  find_in_helix.rs  helpers.rs  mod.rs  open.rs  open_in_helix.rs  run_cargo_nextest.rs  run_xunit.rs
tests/: dummy_tests.rs
zelix/: config.toml
zelix-config/: config.toml
zelix-config/broot/: conf.hjson
zelix-config/zellij/: config.kdl
zelix-config/zellij/layouts/: default.kdl
zelix/broot/: conf.hjson
zelix/zellij/: config.kdl
zelix/zellij/layouts/: default.kdl
