[package]
name = "zelix"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.3", features = ["derive"] }
regex = "1"
toml = "0.8.12"
which = "6.0.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
syn = { version="2.0.66", features = ["full", "visit"] }

